--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,12 +1,24 @@
 server:
   port: 8888
 
+spring:
+  main:
+    banner-mode: "off"
+
+logging:
+  level:
+    com.sapozhnikov.investment: DEBUG
+    org.springframework.web: DEBUG
+
 iex:
   api:
     token: "pk_93586b0cd7034d7fbad5385fd5152f30"
   thread:
     quantity: 10
 
-spring:
-  main:
-    banner-mode: "off"
+external:
+  system:
+    timeout:
+      millis:
+        connect: 5000
+        read: 5000
